# MLOps

./: .gitignore  CITATION.cff  README.md  hello.py  pyproject.toml  review_script.py
.github/workflows/: ci.yml  review.yml
custom_evaluations/: default.md  performance.md  security.md
evaluation_criteria/: README.md  bug_risks.md  code_quality.md  optimization.md  readability.md  review_prompt.txt  security.md  testing.md
scripts/: anthropic_client.py  anthropic_utils.py  comment_utils.py  config.py  diff_fetcher.py  github_client.py  github_utils.py  main.py  reviewer.py  utils.py
