[tool.poetry]
name = "MLOps"
version = "0.1.0"
description = "Automated AI-powered PR review tool using Claude and GitHub Actions"
authors = ["Syed Muhammad Hussain "]
license = "MIT"
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
PyGithub = "^2.1.1"

[tool.poetry.scripts]
ai-pr-reviewer = "scripts.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
